# k8s-visual

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  actions.test.ts  actions.ts  ai.test.ts  ai.ts  assistant.test.ts  assistant.ts  chains.test.ts  chains.ts  insights.test.ts  insights.ts  kindInfo.ts  prefs.test.ts  prefs.ts  styles.css  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/examples/: probe.rs
src-tauri/core/src/: actions.rs  cloud.rs  events.rs  exec.rs  helm.rs  lib.rs  logs.rs  metrics.rs  model.rs  portforward.rs  rbac.rs  summaries.rs  yaml.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  terminal.rs
src/components/: AboutModal.tsx  ActionModal.tsx  Assistant.tsx  CloudConnect.tsx  DetailsPanel.tsx  GraphView.tsx  LogViewer.tsx  OverviewPanel.tsx  ProblemChains.tsx  ResourceNode.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPanel.tsx  TopBar.tsx  Welcome.tsx  WindowControls.tsx  bits.tsx  icons.tsx
src/graph/: build.test.ts  build.ts  layout.ts
src/providers/: cloud.ts  demo.test.ts  demo.ts  tauri.ts
src/views/: AccessView.tsx  ApplyYamlView.tsx  ConfigSecretsView.tsx  EventsView.tsx  ExplorerView.tsx  GraphView.tsx  HelmView.tsx  LogsView.tsx  MetricsView.tsx  NetworkingView.tsx  NodesView.tsx  OverviewView.tsx  StorageView.tsx
