[package]
name = "k8s-visual-core"
version = "0.1.0"
edition = "2021"
description = "Kubernetes client bridge for K8s Visual (no UI dependencies)"
license = "MIT"

[dependencies]
kube = { version = "4", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros"] }
